# Mcp-server-try

./: README.md
mcp-server/: AssistantServer.py  README.md  app1-a5b21-2d18ba85db02.json  client.py  pyproject.toml  requirements.txt  weather.py
